--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="this_is_moveactivity">Ini MoveActivity</string>
     <string name="move_activity_with_data">Pindah Activity dengan Data</string>
     <string name="move_activity_with_object">Pindah Activity dengan Objek</string>
+    <string name="dial_number">Dial Number</string>
+    <string name="chose_number">Pilih Angka yang kamu suka</string>
+    <string name="_50">50</string>
+    <string name="_100">100</string>
+    <string name="_150">150</string>
+    <string name="_200">200</string>
+    <string name="choose">Pilih</string>
+    <string name="move_with_result">Pindah Activity untuk Result</string>
+    <string name="result_from_activity">Hasil dari Activity</string>
 </resources>
